fixed page flicker issue

--- a/scss/layout/_preloader.scss
+++ b/scss/layout/_preloader.scss
@@ -92,4 +92,5 @@
   z-index: -1000;
   visibility: hidden;
   opacity: 0;
+  display: none;
 }
